--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-        "spatie/laravel-permission": "^5.10",
-        "milon/barcode": "^8.0"
+        "maatwebsite/excel": "3.1.48",
+        "milon/barcode": "^8.0",
+        "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
