--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/ui": "^3.4",
         "maatwebsite/excel": "3.1.48",
         "milon/barcode": "^8.0",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
