--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/ui": "^3.4",
         "maatwebsite/excel": "3.1.48",
         "milon/barcode": "^8.0",
+        "mpdf/mpdf": "^8.2",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-permission": "^5.10"
     },
